[package]
name = "blockme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = {version = "1.35.1", features = [ "macros", "time", "rt-multi-thread", "tracing"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
